// Copyright The Helm Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package hapi.release;

import "google/protobuf/timestamp.proto";
import "hapi/release/test_run.proto";

option go_package = "release";

// TestSuite comprises of the last run of the pre-defined test suite of a release version
message TestSuite {
        // StartedAt indicates the date/time this test suite was kicked off
        google.protobuf.Timestamp started_at = 1;

        // CompletedAt indicates the date/time this test suite was completed
        google.protobuf.Timestamp completed_at = 2;

        // Results are the results of each segment of the test
        repeated hapi.release.TestRun results = 3;
}
